# campello_core

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  TODO.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bm_iteration.cpp  bm_memory.cpp  bm_query.cpp  bm_schedule.cpp  bm_spawn.cpp
cmake/: campello_core-config.cmake.in
docs/: API.md  ARCHITECTURE.md  PERFORMANCE.md
examples/: CMakeLists.txt  ex_01_hello_ecs.cpp  ex_02_queries.cpp  ex_03_systems.cpp  ex_04_events.cpp  ex_05_hierarchy.cpp  ex_06_bulk_spawn.cpp  ex_07_change_detection.cpp  ex_08_thread_pool.cpp  ex_09_save_load.cpp  ex_10_demo_game.cpp
include/campello/core/: archetype.hpp  commands.hpp  component.hpp  core.hpp  event.hpp  query.hpp  reflect.hpp  resource.hpp  schedule.hpp  serialize.hpp  snapshot.hpp  types.hpp  version.hpp  world.hpp
include/campello/core/detail/: allocator.hpp  component_registry.hpp  sparse_set.hpp  thread_pool.hpp  type_info.hpp
tests/: CMakeLists.txt  android_smoke.cpp  test_allocator.cpp  test_commands.cpp  test_components.hpp  test_event.cpp  test_hierarchy.cpp  test_prefab.cpp  test_query.cpp  test_reflect.cpp  test_resource.cpp  test_schedule.cpp  test_serialize.cpp  test_snapshot.cpp  test_sparse_set.cpp  test_stress.cpp  test_types.cpp  test_world.cpp
